# utareco-server

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  README.md  create-worktree.sh  docker-compose.yml  gradio_ui.py  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/api/v1/: __init__.py  hpcp.py  recordings.py
app/core/audio/: hpcp.py
app/core/matching/: similarity.py
app/core/vector/: __init__.py  sqlite_vec_manager.py
app/db/: crud.py  database.py  models.py
app/schemas/: hpcp.py
e2e/: README.md  docker_test_readme.md  run_test_docker.sh  同一性判定実装まとめ.md
e2e/case01/: README.md  test_case.py
e2e/case02/: README.md  test_case.py
e2e/case03/: README.md  test_case.py
e2e/case04/: README.md  test_case.py
e2e/case04/datasets/: .gitignore
e2e/case05/: README.md  test_case.py
tools/audio-augment/: README.md  main.py  pyproject.toml  setup.cfg
tools/audio-augment/scripts/: generate_test_audio.py
tools/audio-augment/src/audio_augment/: __init__.py  __main__.py  cli.py  processor.py
tools/audio-augment/tests/: test_processor.py
